--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 90px;
 }
 .half-width{
     width: 50%;
@@ -31,4 +32,11 @@ section{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
-
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.div-2-para{
+    padding-right: 20%;
+}
