footer and experience added

--- a/style.css
+++ b/style.css
@@ -40,3 +40,34 @@ h1{
 .div-2-para{
     padding-right: 20%;
 }
+h2{
+    font-size: 35px;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item{
+    width: 40%;
+    padding-left: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    border-left: 10px solid black;
+}
+#web-dev-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(tomato,orange);
+    border-image-slice: 1;
+}
+#full-stack-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+footer {
+    text-align: center;
+}
